specs/sabnzbd/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sabnzbd

spec:
  selector:
    app: sabnzbd
  ports:
    - name: http
      port: 8080
    - name: https
      port: 9090
