specs/sabnzbd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: sabnzbd

spec:
  rules:
  - host: sabnzbd.d26a.de
    http:
      paths:
      - backend:
          serviceName: sabnzbd 
          servicePort: 8080
